INTGR-142: fix/PageContent width & overflow handling

--- a/src/components/PageContent/pageContent.scss
+++ b/src/components/PageContent/pageContent.scss
@@ -1,22 +1,26 @@
 .pageContent {
-    margin: 32px 24px;
-    display: flex;
-    justify-content: space-between;
-    gap: 80px;
+    padding: 32px 24px;
+    display: inline-block;
+    width: 100%;
 
-    &--landing {
+    &__landing {
         @extend .pageContent;
         justify-content: center;
     }
-}
 
-.pageContent--container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    max-height: 100vh;
-    height: 100vh;
-    width: 100vw;
-    overflow-y: auto;
-    overflow-x: hidden;
+    &__container {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        max-height: 100vh;
+        height: 100vh;
+        width: 100vw;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+    &__scrollableArea {
+        float: inline-start;
+        width: 75%;
+    }
 }
